After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 678178 - user-accounts: Use the symbolic error icon in entries
user-accounts: Use the symbolic error icon in entries
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: User Accounts
unspecified
Other All
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-06-15 16:48 UTC by Stef Walter
Modified: 2012-06-15 21:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
user-accounts: Use the symbolic error icon in entries (1.33 KB, patch)
2012-06-15 16:48 UTC, Stef Walter
committed Details | Review

Description Stef Walter 2012-06-15 16:48:00 UTC
Lapo did some quick design review and pointed out that we should
be using the symbolic icon here.
Comment 1 Stef Walter 2012-06-15 16:48:02 UTC
Created attachment 216533 [details] [review]
user-accounts: Use the symbolic error icon in entries

Use the symbolic error icon when entries as indication when
entries don't validate.
Comment 2 Matthias Clasen 2012-06-15 20:27:01 UTC
Review of attachment 216533 [details] [review]:

Yes, I would have said the same