user-accounts: Use the symbolic error icon in entries

Use the symbolic error icon when entries as indication when
entries don't validate.

https://bugzilla.gnome.org/show_bug.cgi?id=678178